<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_gray_800"
    tools:context=".ui.detail.DetailActivity"
    tools:ignore="ScrollViewCount">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_detail_preview"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="120dp"
            android:alpha="0.2"
            android:contentDescription="@string/gradient"
            android:src="@drawable/gradient" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_detail_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="121dp"
            android:scaleType="fitXY"
            android:src="@color/blue_gray_800"
            app:riv_border_color="?attr/colorOnPrimary"
            app:riv_border_width="5dp"
            app:riv_corner_radius="10dp"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_detail_rating"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="265dp"
            android:src="@drawable/ic_rating"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="278dp"
            android:text="@string/rating"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="14dp"
            android:maxLines="4"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="305dp"
            android:padding="20dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="330dp"
            android:padding="20dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/favorite"
            android:elevation="8dp"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:backgroundTint="@color/blue_gray_900"
            tools:ignore="RtlHardcoded" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp" />
    </FrameLayout>
</ScrollView>